--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -69,6 +69,7 @@
     <string name="album_share_subtitle_requesting">Obţinere informaţii album…</string>
     <string name="album_share_title_new_album">Distribuiţi un album nou</string>
     <string name="album_show_local_only">Arată doar albumele locale</string>
+    <string name="album_show_local_only_summary">Activați pentru a vedea și șterge doar fotografiile de pe telefon</string>
     <string name="album_type_baby">Albume partajate</string>
     <string name="album_type_share">Albumul copilului</string>
     <string name="album_type_system">Albume de sistem</string>
@@ -203,9 +204,10 @@
     <string name="delete_album_msg_format">Ștergeți \"%2$s\" album %1$s %3$s?</string>
     <string name="delete_album_success">Album șters</string>
     <string name="delete_finish_format">%d șters</string>
-    <string name="delete_from_album">din albumul \"%s\" de pe toate dispozitivele</string>
+    <string name="delete_from_album">din albumul \"%s\" și din Mi Cloud</string>
     <string name="delete_from_album_no_account">din albumul \"%s\"</string>
     <string name="delete_from_all_devices">de pe toate dispozitivele</string>
+    <string name="delete_from_all_devices_and_cloud">de pe toate dispozitivele și din Mi Cloud</string>
     <string name="delete_from_cloud">Ștergeți fotografiile din Mi Cloud</string>
     <string name="delete_from_devices">De pe toate dispozitivele cu sincronizare automată</string>
     <string name="delete_from_devices_album">De pe toate dispozitivele pe care s-a sincronizat acest album</string>
@@ -354,14 +356,10 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="input_or_select_a_name">Introduceți sau selectați un nume</string>
     <string name="invalid_invition_url">URL greşit</string>
     <string name="invalid_recipient_message">Numele destinatarilor introduse sunt greşite</string>
-    <string name="invite_send_sms_tip">Operatorul vă poate taxa pentru un SMS utilizat pentru a trimite această invitație.</string>
-    <string name="invite_sharer_again_confirm_button_text">Invitaţi din nou</string>
     <string name="invite_sharer_confirm_button_text">Invitaţi</string>
-    <string name="invite_sharer_phone_number_tip">Introduceți numărul de telefon</string>
     <string name="invite_sharer_relation_tip">Gradul de rudenie cu %1$s</string>
     <string name="invite_sharer_title">Invitaţi %1$s %2$s</string>
     <string name="invite_tip">Distribuiţi fotografiile copilului dvs.</string>
-    <string name="invited_tip">Invitat</string>
     <string name="is">Da</string>
     <string name="kick_owner_user_positive_button_text">Eliminaţi</string>
     <string name="kick_owner_user_title">Eliminați această persoană?</string>
@@ -468,7 +466,6 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="people_page_unname">Fără nume</string>
     <string name="pet_album_display_name">Fotografiile animalelor de companie</string>
     <string name="petabyteShort">PB</string>
-    <string name="phone_number_empty_alert">Adăugaţi numărul de telefon</string>
     <string name="photo">Fotografii</string>
     <string name="photo_edit_file_not_exits_tip">Descărcați mai întâi fotografia pentru a o putea edita</string>
     <string name="photo_editor_saving">Se salvează...</string>
@@ -542,13 +539,21 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="scan_barcode_to_join">Scanaţi un cod QR pentru a adăuga un album</string>
     <string name="scan_qr_code_buttom_text">Scanaţi codul QR pentru a vizualiza acest album</string>
     <string name="secret_album_display_name">Album ascuns</string>
+    <string name="secret_album_password_update_dialog_cancel">Renunțați</string>
+    <string name="secret_album_password_update_dialog_msg">Aplicația Galerie va utiliza parola de protecție a confidențialității de acum încolo.</string>
+    <string name="secret_album_password_update_dialog_ok">OK</string>
+    <string name="secret_album_password_update_dialog_title">Actualizați parola</string>
+    <string name="secret_album_set_pc_password_dialog_msg">Parola de protecție a confidențialității este valabilă pentru aplicații, fotografii, notițe, dosare ascunse, etc.</string>
+    <string name="secret_album_set_pc_password_dialog_ok">Setați parola</string>
+    <string name="secret_album_set_pc_password_dialog_title">Setați o nouă parolă</string>
+    <string name="secret_album_set_pc_password_first_use_msg">Se va folosi parola de protecție a confidențialității. Aceasta este valabilă pentru aplicații, fotografii, notițe, dosare ascunse, etc.</string>
+    <string name="secret_album_set_pc_password_first_use_title">Parola de protecție a confidențialității</string>
     <string name="secret_reason_space_full">Albumul Cloud este plin</string>
     <string name="secret_reason_too_large">Fișierul este prea mare</string>
     <string name="secret_reason_type_not_support">"Acest tip de fișier nu este suportat"</string>
     <string name="secret_reason_unknow_reasons">Eroare necunoscută</string>
     <string name="select_item_face">"Este '%s'?"</string>
     <string name="select_origin_tip">Fișierul original (%s)</string>
-    <string name="send_invitation_fail">Nu s-a putut trimite invitația</string>
     <string name="send_multiple_files_hint_format">Trimiteţi (%s)</string>
     <string name="send_public_url">Trimiteţi URL album</string>
     <string name="send_too_many_files_error">Se pot trimite cel mult %d elemente odată</string>
