--- a/Romanian/main/Stk1.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Stk1.apk/res/values-ro/strings.xml
@@ -8,8 +8,8 @@
     <string name="appIV_name">Unelte SIM 4</string>
     <string name="appI_name">Unelte SIM 1</string>
     <string name="app_name">Unelte SIM</string>
-    <string name="app_name1">Unelte 1 SIM</string>
-    <string name="app_name2">Unelte 2 SIM</string>
+    <string name="app_name1">Unelte SIM 1</string>
+    <string name="app_name2">Unelte SIM 2</string>
     <string name="button_cancel">Renunță</string>
     <string name="button_no">Nu</string>
     <string name="button_ok">OK</string>
