--- a/Romanian/main/MiuiHome.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="activity_not_found">Aplicaţia nu este instalată</string>
+    <string name="activity_not_found">"Aplicaţia nu este instalată"</string>
     <string name="add_screen">Adăugați un ecran</string>
     <string name="app_already_exist">Aplicaţia există deja</string>
     <string name="app_being_backup_message">Aplicația este în curs de rezervare</string>
@@ -12,7 +12,7 @@
     <string name="app_category_games">Jocuri</string>
     <string name="app_category_health">Sănătate</string>
     <string name="app_category_lifestyle">Stil de viață</string>
-    <string name="app_category_music_movie">Muzică şi Video</string>
+    <string name="app_category_music_movie">Muzică şi Videoclipuri</string>
     <string name="app_category_news">Noutăţi</string>
     <string name="app_category_photos">Fotografii</string>
     <string name="app_category_productivity">Productivitate</string>
@@ -24,8 +24,8 @@
     <string name="application_name">Lansator de sistem</string>
     <string name="apply">Aplicați</string>
     <string name="apply_action">Aplicaţi</string>
-    <string name="apply_as_lock_screen">Blocare ecran</string>
-    <string name="apply_as_wallpaper">Ecranul de pornire</string>
+    <string name="apply_as_lock_screen">Aplicați ca imagine de blocare ecran</string>
+    <string name="apply_as_wallpaper">Setați ca Ecran de pornire</string>
     <string name="apply_both">Ambele</string>
     <string name="aqi_quality_index_dangerous">Periculos</string>
     <string name="aqi_quality_index_good">Bun</string>
@@ -33,14 +33,14 @@
     <string name="aqi_quality_index_light_pollution">Atenţie</string>
     <string name="aqi_quality_index_moderate">Moderat</string>
     <string name="aqi_quality_index_unhealthy">Nesănătos</string>
-    <string name="bad_wallpaper_source_prompt">Imposibil de încărcat imaginea de fundal</string>
+    <string name="bad_wallpaper_source_prompt">"Imposibil de încărcat imaginea de fundal"</string>
     <string name="buffering">Încărcare memorie tampon…</string>
     <string name="cancel_action">Anulaţi</string>
     <string name="cancel_btn_label">Anulaţi</string>
     <string name="cant_edit_lock_screen">"Nu se poate edita stilul ecranului de blocare."</string>
-    <string name="cant_remove_folder">Nu se poate elimina dosarul</string>
-    <string name="cant_remove_retained_app">Nu a putut fi eliminată această aplicație</string>
-    <string name="cant_remove_system_app">Nu se poate elimina o aplicație de sistem</string>
+    <string name="cant_remove_folder">"Nu se poate elimina dosarul"</string>
+    <string name="cant_remove_retained_app">"Nu a putut fi eliminată această aplicație"</string>
+    <string name="cant_remove_system_app">"Nu se poate elimina o aplicație de sistem"</string>
     <string name="change_wallpaper">Modificați</string>
     <string name="children_folder_title">Copii</string>
     <string name="children_mode_exit">Ieşire</string>
@@ -84,13 +84,13 @@
     <string name="emptyplaylist">Apăsaţi pt. a adăuga melodii</string>
     <string name="enable_wallpaper_scroll">Activare derulare fundal</string>
     <string name="encryption">Criptare</string>
-    <string name="failed_to_delete_temporary">Eliminare eşuată</string>
-    <string name="failed_to_drop">Mutare eşuată</string>
+    <string name="failed_to_delete_temporary">"Nu s-a putut elimina"</string>
+    <string name="failed_to_drop">"Mutare eşuată"</string>
     <string name="failed_to_drop_widget_invalid">Obiect widget nevalid</string>
     <string name="failed_to_drop_widget_nospace">Nu mai este loc pe acest ecran</string>
-    <string name="failed_to_load_image">Nu se poate încărca imaginea</string>
+    <string name="failed_to_load_image">"Nu s-a putut încărca imaginea"</string>
     <string name="folder_name">Dosar</string>
-    <string name="frame_load_failed">Încărcarea cadrului a eşuat</string>
+    <string name="frame_load_failed">"Încărcarea cadrului a eşuat"</string>
     <string name="free_style_apps_title">Selectaţi aplicaţia</string>
     <string name="free_style_drawer_title">Toate aplicaţiile</string>
     <string name="free_style_edit_app">Aplicaţie</string>
@@ -112,7 +112,7 @@
     <string name="gadget_clock_22_label">Ceas 2x2</string>
     <string name="gadget_clock_24_label">Ceas 4x2</string>
     <string name="gadget_clock_label">Ceas</string>
-    <string name="gadget_error_text">Probleme la încărcarea obiectului widget</string>
+    <string name="gadget_error_text">"Nu s-a putut încărca obiectul widget"</string>
     <string name="gadget_google_search_label">Căutare Google</string>
     <string name="gadget_load_error">Încărcare obiect widget…</string>
     <string name="gadget_mtz_label">Gadget-uri</string>
@@ -123,8 +123,8 @@
     <string name="gadget_photo_label">Imagine</string>
     <string name="gadget_power_clear_button_label">Curăţare profundă</string>
     <string name="gadget_search_label">Căutare</string>
-    <string name="gadget_weather_app_not_installed">Atingeţi pentru a descărca aplicaţia Meteo de la MIUI</string>
-    <string name="gadget_weather_aqi_title">"Calitate aer: "</string>
+    <string name="gadget_weather_app_not_installed">"Atingeţi pentru a descărca aplicaţia Meteo de la MIUI"</string>
+    <string name="gadget_weather_aqi_title">"Calitatea aerului: "</string>
     <string name="gadget_weather_download_message">Trebuie descărcat conținutul aplicaţiei: %1$s (%2$s). Reporniți aplicația după descărcare.</string>
     <string name="gadget_weather_download_start">Descărcare</string>
     <string name="gadget_weather_download_title">Descărcare</string>
@@ -140,22 +140,22 @@
     <string name="group_folder">Dosar nou</string>
     <string name="group_live_folders">Dosare</string>
     <string name="group_shortcuts">Comenzi rapide</string>
-    <string name="guide_install_app_msg">Aplicaţia nu este instalată pe telefonul dvs. Căutaţi şi descărcaţi aplicaţia acum?</string>
+    <string name="guide_install_app_msg">"Aplicaţia nu este instalată pe telefonul dvs. Căutaţi şi descărcaţi aplicaţia acum?"</string>
     <string name="guide_install_app_title">Instalaţi aplicaţia</string>
     <string name="guide_tips_editing_mode">Atingeți și mențineți apăsat pentru a plasa un widget pe ecran</string>
     <string name="home_screen">Ecranul principal</string>
-    <string name="image_too_small_message">Imaginea originală nu este destul de mare</string>
+    <string name="image_too_small_message">"Imaginea originală nu este destul de mare"</string>
     <string name="install">Instalaţi</string>
     <string name="invalid_contact_shortcut">Contact greşit</string>
     <string name="is_setting_wallpaper_message">Setare imagine de fundal…</string>
-    <string name="is_system_wallpaper_message">Nu se pot șterge resurse de sistem</string>
+    <string name="is_system_wallpaper_message">"Nu se pot șterge resurse de sistem"</string>
     <string name="like">Îmi place</string>
     <string name="liked">Favorită</string>
     <string name="loading_desktop">Doar o secundă…</string>
     <string name="loading_wallpaper">Doar o secundă…</string>
     <string name="local_wallpaper">Descărcate</string>
     <string name="lock_screen">Blocarea ecranului</string>
-    <string name="lock_screen_failed_message">Aplicare eşuată</string>
+    <string name="lock_screen_failed_message">"Aplicare eşuată"</string>
     <string name="lock_screen_success_message">Aplicată</string>
     <string name="lock_screen_wallpaper">Imagine de fundal în blocarea ecranului</string>
     <string name="menu_add">Adăugaţi</string>
@@ -173,10 +173,12 @@
     <string name="menu_wallpaper">Imagini de fundal</string>
     <string name="menu_workspace_preview">Previzualizare</string>
     <string name="mi_wallpaper">Magazin Teme MIUI</string>
-    <string name="mtzgadget_missing_text">Obiectul widget nu este disponibil</string>
+    <string name="mtzgadget_missing_text">"Obiectul widget nu este disponibil"</string>
     <string name="multi_selecting_tips">Pentru a selecta o aplicaţie, atingeţi pictograma corespunzătoare</string>
     <string name="no_detail_page">Nicio pagină cu detalii</string>
     <string name="normal_wallpaper">Imagine de fundal</string>
+    <string name="notification_installed">Instalat cu succes</string>
+    <string name="notification_open_button">Deschideți</string>
     <string name="online_wallpaper">On-line</string>
     <string name="out_of_space">Nu mai este loc pe acest ecran</string>
     <string name="permdesc_install_shortcut">Permite unei aplicaţii să adauge comenzi rapide fără intervenţia utilizatorului.</string>
@@ -191,7 +193,7 @@
     <string name="permlab_write_settings">Scrie setări şi comenzi rapide pentru Ecranul de pornire</string>
     <string name="photo_adjust">Previzualizare</string>
     <string name="photo_confirm">Aplicaţi</string>
-    <string name="photo_load_failed">Încărcarea fotografiei a eşuat</string>
+    <string name="photo_load_failed">"Încărcarea fotografiei a eşuat"</string>
     <string name="pref_cell_layout_size">Aspect pictograme</string>
     <string name="pref_enable_drawing_cache_summary">Dezactivaţi pentru a elibera memoria. Poate reduce performanța.</string>
     <string name="pref_enable_drawing_cache_title">Cache desenare</string>
@@ -199,7 +201,7 @@
     <string name="pref_icon_shadow_title">Umbre pictograme</string>
     <string name="pref_keep_in_memory_summary">MIUI va continua să funcţioneze atunci când memoria este redusă</string>
     <string name="pref_keep_in_memory_title">Blocaţi MIUI în memorie</string>
-    <string name="pref_keep_layout_summary">Modificarea ecranului de pornire nu va afecta poziţia relativă a pictogramelor una faţă de cealaltă</string>
+    <string name="pref_keep_layout_summary">"Modificarea ecranului de pornire nu va afecta poziţia relativă a pictogramelor una faţă de cealaltă"</string>
     <string name="pref_keep_layout_title">Blocaţi aspectul pictogramelor</string>
     <string name="pref_render_in_truecolor_summary">Dezactivarea acestei caracteristici îmbunătățește performanța de desenare</string>
     <string name="pref_render_in_truecolor_title">Grafică de înaltă calitate</string>
@@ -212,7 +214,7 @@
     <string name="recommend_apps_notice">Aplicaţii promovate</string>
     <string name="recommend_apps_notice_nodata">Aplicații promovate (Nu există date)</string>
     <string name="recommend_apps_switch_title">Aplicaţii promovate</string>
-    <string name="recommend_apps_tips">Această caracteristică trebuie să se conecteze la internet pentru a funcţiona în mod normal. Pentru a dezactiva opţiunea, atingeți numele acestui dosar.</string>
+    <string name="recommend_apps_tips">"Această caracteristică trebuie să se conecteze la internet pentru a funcţiona în mod normal. Pentru a dezactiva opţiunea, atingeți numele acestui dosar."</string>
     <string name="reset_scene_prompt">Ecranul va fi resetat la aspectul prestabilit.</string>
     <string name="screen_number">Ecranul %d</string>
     <string name="scroll_tip_format_when_announce_accessibility">pagina %1$d, %2$d aplicaţii</string>
@@ -228,11 +230,11 @@
     <string name="sort_by_abc">Sortare după nume</string>
     <string name="sort_by_frequency">Sortare după utilizare</string>
     <string name="sort_by_not_defined">Sortare automată</string>
-    <string name="start_activity_failed">Nu se poate porni lansatorul de sistem</string>
-    <string name="starting_preset_app">Pornire</string>
-    <string name="status_downloaded">descărcare</string>
-    <string name="status_downloading">descărcare</string>
-    <string name="status_installing">instalare</string>
+    <string name="start_activity_failed">"Nu se poate porni lansatorul de sistem"</string>
+    <string name="starting_preset_app">Pornire...</string>
+    <string name="status_downloaded">Descărcate</string>
+    <string name="status_downloading">Descărcare</string>
+    <string name="status_installing">Instalare</string>
     <string name="status_paused">în pauză</string>
     <string name="status_pending">în aşteptare</string>
     <string name="title_select_live_folder">Selectaţi dosarul</string>
@@ -251,11 +253,11 @@
     <string name="uninstall_dialog_message">Dezinstalarea va elimina toate datele asociate aplicaţiei</string>
     <string name="uninstall_dialog_title_format">Dezinstalaţi %s</string>
     <string name="uninstall_dialog_title_multi_format" formatted="false">Dezinstalaţi %s şi alte %d aplicaţii?</string>
-    <string name="uninstall_result_failed">Nu se poate dezinstala %s</string>
+    <string name="uninstall_result_failed">"Nu se poate dezinstala %s"</string>
     <string name="uninstall_result_multi_succeeded">%1$d aplicaţii dezinstalate</string>
-    <string name="uninstall_result_other_failed" formatted="false">Nu se poate dezinstala %s şi alte %d aplicaţii</string>
+    <string name="uninstall_result_other_failed" formatted="false">"Nu se poate dezinstala %s şi alte %d aplicaţii"</string>
     <string name="uninstall_result_succeeded">Aplicaţie dezinstalată</string>
-    <string name="uninstall_result_two_failed">Nu se poate dezinstala %s şi încă o aplicaţie</string>
+    <string name="uninstall_result_two_failed">"Nu se poate dezinstala %s şi încă o aplicaţie"</string>
     <string name="uninstall_with_xspace_dialog_message">Aplicațiile clonate corespunzătoare vor fi eliminate împreună cu datele acestora.</string>
     <string name="uninstall_xspace_dialog_message">Dezinstalarea aplicației clonate va șterge și toate datele acesteia.</string>
     <string name="uninstall_xspace_dialog_title_format">Dezinstalați aplicația clonată \"%s\"</string>
@@ -263,7 +265,7 @@
     <string name="unnamed_folder_name">Dosar fără nume</string>
     <string name="wallpaper">Imagine de fundal</string>
     <string name="wallpaper_auto_change_title">Blocare ecran</string>
-    <string name="wallpaper_failed_message">Nu se poate aplica imaginea de fundal</string>
+    <string name="wallpaper_failed_message">"Nu s-a putut aplica imaginea de fundal"</string>
     <string name="wallpaper_scaling_message">Extindere la dimensiunea fixă</string>
     <string name="wallpaper_scroll_type_tips">Derulare imagine de fundal</string>
     <string name="wallpaper_settings">Imagine de fundal</string>
