--- a/Romanian/main/TeleService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/TeleService.apk/res/values-ro/strings.xml
@@ -124,7 +124,7 @@
     <string name="call_advanced_setting_title">Setări avansate</string>
     <string name="call_background_default">Implicit</string>
     <string name="call_background_lock_wallpaper">Imagine de fundal</string>
-    <string name="call_background_setting">Fundal apelare</string>
+    <string name="call_background_setting">Imagine de fundal pt. apelurile primite</string>
     <string name="call_barring_sum">Setările restricţionării apelurilor vocale</string>
     <string name="call_description_recording">Înregistrare…</string>
     <string name="call_forwarding_number_hint">Redirecţionare apeluri la</string>
@@ -842,7 +842,7 @@ Pentru mai multe opţiuni, încercaţi din nou sau apelaţi Serviciul Clienţi."
     <string name="path_app_name">Aplicații de sistem/Telefon</string>
     <string name="path_auto_answer_pref_title">Aplicații de sistem/Telefon/Răspuns automat</string>
   <string name="path_autoip">Aplicații de sistem/Telefon/Setări avansate/Auto IP dialing</string>
-  <string name="path_call_background_setting_name">Aplicații de sistem/Telefon/Setări avansate/Fundal apelare</string>
+  <string name="path_call_background_setting_name">Aplicații de sistem/Telefon/Setări avansate/Imagine de fundal apeluri primite</string>
     <string name="path_call_forwarding_settings">Aplicații de sistem/Telefon/Setările pentru redirecționarea apelurilor</string>
     <string name="path_call_record_auto_title">Aplicații de sistem/Telefon/Înregistrare apel/Înregistrare apeluri în mod automat</string>
     <string name="path_call_record_setting">Aplicații de sistem/Telefon/Înregistrare apel</string>
