--- a/Romanian/main/Weather.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/strings.xml
@@ -17,7 +17,6 @@
     <string name="activity_main_alert"/>
     <string name="activity_main_clickable">&gt;</string>
     <string name="activity_main_one_alert"/>
-    <string name="activity_main_refresh_fail">Nu se poate conecta la reţea</string>
     <string name="activity_main_time_format">E</string>
     <string name="activity_main_update_time">Actualizat %1$s</string>
     <string name="activity_main_update_time_right_now">acum</string>
@@ -57,6 +56,7 @@
     <string name="button_sure_abandon">Renunțați la modificări?</string>
     <string name="close">Închideți</string>
     <string name="commercial">Reclamă</string>
+    <string name="common_loading_text">încărcare...</string>
     <string name="daily_forcast_drawer_on_bottom">Ascunde</string>
     <string name="daily_forcast_drawer_on_top">Prognoza pe %1$s zile</string>
     <string name="daily_forcast_no_stable_direction">Vântul nu adie</string>
@@ -131,6 +131,7 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="realtime_aqi_title">Indice de Calitate a Aerului</string>
     <string name="realtime_humidity_title">Umiditatea relativă</string>
     <string name="realtime_wind_default_title">Vânt</string>
+    <string name="refresh_fail">"Nu s-a putut conecta la rețea"</string>
     <string name="retry">Încercați din nou</string>
     <string name="set">Setări</string>
     <string name="set_degree_centigrade">°C</string>
