--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
@@ -56,7 +56,7 @@
     <string name="add_account">Adăugaţi un cont</string>
     <string name="alert_title_remove_account">Eliminaţi contul?</string>
     <string name="app_name">Cont Mi</string>
-    <string name="auth_fail_warning">Sesiunea aexpirat, conectați-vă din nou mai târziu</string>
+    <string name="auth_fail_warning">Sesiunea a expirat, conectați-vă din nou mai târziu</string>
     <string name="authorize_title">Autorizare</string>
     <string name="barcode_add_account_prompt">Pentru a adăuga un cont, scanaţi codul QR din nou după conectare.</string>
     <string name="bind_facebook">Adăugaţi contul dvs. Facebook</string>
@@ -93,6 +93,8 @@
     <string name="data_wipe_from_device">Ștergeți de pe dispozitiv</string>
     <string name="delete_action">Ştergeţi</string>
     <string name="delete_app">Ștergeți aplicația</string>
+    <string name="delete_bank_card_message">Pentru a vă proteja, vom șterge datele cardului bancar după deconectare</string>
+    <string name="delete_bank_card_title">Șterge datele cardului bancar</string>
     <string name="delete_browser">Eliminați browser-ul</string>
     <string name="delete_device">Eliminați dispozitivul</string>
     <string name="delete_device_btn">Eliminaţi</string>
@@ -120,7 +122,7 @@
     <string name="find_device_activate_account">Activați contul</string>
     <string name="find_device_bad_response_error">"Nu s-a putut obține starea datorită unei erori de server; încercați din nou mai târziu"</string>
     <string name="find_device_display_id">Codul de deblocare: %s</string>
-    <string name="find_device_error_password_not_confirmed">"Nu s-a putut dezactiva Gasirea dispozitivului. Introduceți parola contului Mi din nou."</string>
+    <string name="find_device_error_password_not_confirmed">"Nu s-a putut dezactiva Localizarea dispozitivului. Introduceți parola contului Mi din nou."</string>
     <string name="find_device_error_password_recently_changed">"Ați modificat parola în ultimele 3 zile. Nu se poate dezactiva acum Localizarea dispozitivului din motive de siguranță."</string>
     <string name="find_device_interrupted">Acțiunea a fost întreruptă; încercați din nou mai târziu</string>
     <string name="find_device_io_error">"Nu se poate conecta la rețea"</string>
