--- a/Romanian/main/XiaomiServiceFramework.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiServiceFramework.apk/res/values-ro/strings.xml
@@ -35,8 +35,8 @@
     <string name="activate_popup_confirm_failed_receive_sms">Reîncercaţi</string>
     <string name="activate_popup_confirm_failed_send_sms">Reîncercaţi</string>
     <string name="activate_popup_confirm_failed_server">Reîncercaţi</string>
-    <string name="activate_popup_desc_2_intl_sim_cards">2 mesaje text internaţionale vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator)</string>
-    <string name="activate_popup_desc_2_sim_cards">2 mesaje text vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator)</string>
+    <string name="activate_popup_desc_2_intl_sim_cards">2 mesaje text internaţionale vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator). </string>
+    <string name="activate_popup_desc_2_sim_cards">2 mesaje text vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator). </string>
     <string name="activate_popup_desc_all_gateway_failed_query_info">"Nu se poate găsi numărul de telefon. Asigurați-vă că a fost activată cartela SIM.
 Introduceți numărul de telefon asociat cu noua cartelă SIM pentru a reactiva %s"</string>
     <string name="activate_popup_desc_all_gateway_failed_send_sms">"Nu s-a putut trimite un mesaj de activare. Asigurați-vă că a fost activată cartela SIM.
@@ -48,18 +48,18 @@ Introduceți numărul de telefon asociat cu noua cartelă SIM pentru a reactiva 
     <string name="activate_popup_desc_failed_send_sms">Nu s-a reuşit trimiterea mesajului de activare. Asigurați-vă că a fost activată cartela SIM.</string>
     <string name="activate_popup_desc_failed_server">Verificați reţeaua şi încercaţi din nou.</string>
     <string name="activate_popup_desc_find_device_postfix">Un mesaj SMS de activare poate fi trimis după ce înlocuiți cartelele SIM.</string>
-    <string name="activate_popup_desc_intl_sim_card">Un mesaj text internaţional va fi trimis pentru activarea cartelei SIM ce va permite utilizarea %s (tarifare de la operator)</string>
-    <string name="activate_popup_desc_mixed_sim_cards">Un mesaj text local şi unul internaţional vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator)</string>
-    <string name="activate_popup_desc_new_2_intl_sim_cards">Cartela SIM a fost schimbată. 2 mesaje text internaţionale vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator)</string>
-    <string name="activate_popup_desc_new_2_sim_cards">Cartela SIM a fost schimbată. 2 mesaje text vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator)</string>
-    <string name="activate_popup_desc_new_intl_sim_card">Cartela SIM a fost schimbată. Un mesaj text internaţional va fi trimis pentru activarea cartelei SIM ce va permite utilizarea %s (tarifare de la operator)</string>
-    <string name="activate_popup_desc_new_mixed_sim_cards">Cartela SIM a fost schimbată. Un mesaj text normal şi unul internaţional vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator)</string>
-    <string name="activate_popup_desc_new_sim_card">Cartela SIM a fost schimbată. Un mesaj text va fi trimis pentru activarea cartelei SIM ce va permite utilizarea %s (tarifare de la operator)</string>
+    <string name="activate_popup_desc_intl_sim_card">Un mesaj text internaţional va fi trimis pentru activarea cartelei SIM ce va permite utilizarea %s (tarifare de la operator).</string>
+    <string name="activate_popup_desc_mixed_sim_cards">Un mesaj text local şi unul internaţional vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator).</string>
+    <string name="activate_popup_desc_new_2_intl_sim_cards">Cartela SIM a fost schimbată. 2 mesaje text internaţionale vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator).</string>
+    <string name="activate_popup_desc_new_2_sim_cards">Cartela SIM a fost schimbată. 2 mesaje text vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator).</string>
+    <string name="activate_popup_desc_new_intl_sim_card">Cartela SIM a fost schimbată. Un mesaj text internaţional va fi trimis pentru activarea cartelei SIM ce va permite utilizarea %s (tarifare de la operator).</string>
+    <string name="activate_popup_desc_new_mixed_sim_cards">Cartela SIM a fost schimbată. Un mesaj text normal şi unul internaţional vor fi trimise pentru activarea celor 2 cartele SIM ce va permite utilizarea %s (tarifare de la operator).</string>
+    <string name="activate_popup_desc_new_sim_card">Cartela SIM a fost schimbată. Un mesaj text va fi trimis pentru activarea cartelei SIM ce va permite utilizarea %s (tarifare de la operator).</string>
     <string name="activate_popup_desc_new_sim_card_downlink">Cartela SIM a fost schimbată. Introduceţi numărul cartelei SIM, pentru activarea %s</string>
-    <string name="activate_popup_desc_register_account">Un mesaj text va fi trimis pentru activarea contului dvs. Mi</string>
+    <string name="activate_popup_desc_register_account">Un mesaj text va fi trimis pentru activarea contului dvs. Mi.</string>
     <string name="activate_popup_desc_register_account_downlink">Introduceţi numărul de telefon</string>
-    <string name="activate_popup_desc_register_account_intl">Un mesaj text internaţional va fi trimis pentru activarea contului dvs. Mi</string>
-    <string name="activate_popup_desc_sim_card">Un mesaj text va fi trimis pentru activarea cartelei SIM ce va permite utilizarea %s (tarifare de la operator)</string>
+    <string name="activate_popup_desc_register_account_intl">Un mesaj text internaţional va fi trimis pentru activarea contului dvs. Mi.</string>
+    <string name="activate_popup_desc_sim_card">Un mesaj text va fi trimis pentru activarea cartelei SIM ce va permite utilizarea %s (tarifare de la operator).</string>
     <string name="activate_popup_desc_sim_card_downlink">Pentru activarea %s, introduceţi numărul de telefon</string>
     <string name="activate_popup_desc_voip_privacy">Politica de Confidențialitate Weihui</string>
     <string name="activate_popup_desc_voip_privacy_prefix">". VoIP este susținut de Weihui. Vizualizaţi "</string>
@@ -74,10 +74,11 @@ Introduceți numărul de telefon asociat cu noua cartelă SIM pentru a reactiva 
     <string name="activate_popup_title_manual">Activare %s</string>
     <string name="activate_popup_title_new_sim_card">Reactivare %s</string>
     <string name="activate_popup_title_register_account">Asociaţi cartela SIM</string>
-    <string name="activate_status_desc_acquire_phone_number">Obţinerea numărului de telefon…</string>
-    <string name="activate_status_desc_acquire_phone_number_server_error">Eroare de server la obţinerea numărului de telefon</string>
-    <string name="activate_status_desc_acquire_phone_number_server_no_info">Nu a reuşit obținerea numărului de telefon</string>
-    <string name="activate_status_desc_checking_xiaomi_account">Verificarea contului Mi…</string>
+    <string name="activate_sms_postfix">Acest mesaj SMS este utilizat pentru activarea serviciului Mi</string>
+    <string name="activate_status_desc_acquire_phone_number">Verificare număr de telefon…</string>
+    <string name="activate_status_desc_acquire_phone_number_server_error">Eroare de server la verificarea numărului de telefon</string>
+    <string name="activate_status_desc_acquire_phone_number_server_no_info">"Nu s-a putut verifica numărul de telefon"</string>
+    <string name="activate_status_desc_checking_xiaomi_account">Se verifică contul Mi…</string>
     <string name="activate_status_desc_checking_xiaomi_account_server_error">Eroare de server în timpul verificării contului Mi</string>
     <string name="activate_status_desc_completed_with_sms_sent">A fost trimis un mesaj SMS pentru activarea cartelei SIM</string>
     <string name="activate_status_desc_device_id_error">IMEI nevalid</string>
